Fix scaling on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,8 +4,6 @@ body {
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  width: 100%;
-  height: 100vh;
   display: relative;
   background-color: #80d993;
   overflow: hidden;
@@ -16,16 +14,6 @@ body,
 .app,
 .root {
   touch-action: none;
-}
-
-.root {
-  width: 100%;
-  height: 100%;
-}
-
-canvas {
-  width: 100%;
-  height: 100vh;
 }
 
 button {
